# paraview_smtk_reader

./: CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  SMTKMultiBlockReader.xml  plugin.cmake  vtkSMTKMultiBlockReader.cxx  vtkSMTKMultiBlockReader.h
test/data/: car.stp
